update body index html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,20 @@
 			</nav>
 		</header>
 		<div>
-			
+			<img src="google_logo.png" alt="google logo">
+			<form> <input type="text"/ name="search">
+			<button> Recherche Google </button>
+			<button> J'ai de la chance </button>
 		</div>
+
+	<footer>
+		<p> France </p>
+		<ul>
+			<li> <a href="https://ads.google.com/intl/en_FR/home/"> Publicité </a></li>
+			<li> <a href="https://www.google.com/services/#?modal_active=none "> Entreprise </a></li>
+			<li> <a href="https://www.google.com/intl/fr_fr/about/"> A propos </a></li>	
+
+	</footer>
 		
 	</body>
 </html>
