--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
+		<meta  name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Google</title>
+
 	</head>
 	<body>
 		<header>
-			<nav>
-				<ul>
+			<div id="nav">
+				<ul class="navtabs">
 					<li> <a href="https://www.gmail.com">Gmail</a></li>
 					<li> <a href="https://www.google.fr/imghp?hl=fr&tab=wi">Images</a></li>
 					<li> <a href="https://www.google.fr/intl/fr/options/">Bouton Application</a></li>
 					<li> <a href="https://accounts.google.com/"><button>Connexion</button></a></li>
 				</ul>
-			</nav>
+			</div>
 		</header>
-		<div>
+
+		<div class="main">
 			<img src="google_logo.png" alt="google logo">
 			<form> <input type="text"/ name="search">
 			<button> Recherche Google </button>
@@ -22,6 +27,7 @@
 		</div>
 
 	<footer>
+		
 		<p> France </p>
 		<ul>
 			<li> <a href="https://ads.google.com/intl/en_FR/home/"> Publicité </a></li>
