modif index et style, ajout d'un dossier pour les images.

--- a/index.html
+++ b/index.html
@@ -10,30 +10,31 @@
 	<body>
 		<header>
 			<div id="nav">
-				<ul class="navtabs">
+				<ul>
 					<li> <a href="https://www.gmail.com">Gmail</a></li>
 					<li> <a href="https://www.google.fr/imghp?hl=fr&tab=wi">Images</a></li>
-					<li> <a href="https://www.google.fr/intl/fr/options/">Bouton Application</a></li>
+					<li> <a href="https://www.google.fr/intl/fr/options/"><img src="images/app_logo.png" alt="app logo"></a></li>
 					<li> <a href="https://accounts.google.com/"><button>Connexion</button></a></li>
 				</ul>
 			</div>
 		</header>
 
-		<div class="main">
-			<img src="google_logo.png" alt="google logo">
-			<form> <input type="text"/ name="search">
-			<button> Recherche Google </button>
-			<button> J'ai de la chance </button>
+		<div id="main">
+			<div class="main_elements">
+				<img src="images/google_logo.png" alt="google logo">
+				<form> <input type="text"/ name="search"></form>
+				<button> Recherche Google </button>
+				<button> J'ai de la chance </button>
+			</div>
 		</div>
 
-	<footer>
-		
+	<footer>		
 		<p> France </p>
 		<ul>
 			<li> <a href="https://ads.google.com/intl/en_FR/home/"> Publicité </a></li>
 			<li> <a href="https://www.google.com/services/#?modal_active=none "> Entreprise </a></li>
-			<li> <a href="https://www.google.com/intl/fr_fr/about/"> A propos </a></li>	
-
+			<li> <a href="https://www.google.com/intl/fr_fr/about/"> A propos </a></li>
+		</ul>
 	</footer>
 		
 	</body>
