--- a/index.html
+++ b/index.html
@@ -30,11 +30,23 @@
 
 	<footer>		
 		<p> France </p>
-		<ul>
-			<li> <a href="https://ads.google.com/intl/en_FR/home/"> Publicité </a></li>
-			<li> <a href="https://www.google.com/services/#?modal_active=none "> Entreprise </a></li>
-			<li> <a href="https://www.google.com/intl/fr_fr/about/"> A propos </a></li>
-		</ul>
+		<div class="footer_left">
+			<ul>
+				<li> <a href="https://ads.google.com/intl/en_FR/home/"> Publicité </a></li>
+				<li> <a href="https://www.google.com/services/#?modal_active=none "> Entreprise </a></li>
+				<li> <a href="https://www.google.com/intl/fr_fr/about/"> A propos </a></li>
+			</ul>
+		</div>
+
+		<div>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>	
+		</div>
+
 	</footer>
 		
 	</body>
