modif style et html

--- a/index.html
+++ b/index.html
@@ -14,39 +14,31 @@
 					<li> <a href="https://www.gmail.com">Gmail</a></li>
 					<li> <a href="https://www.google.fr/imghp?hl=fr&tab=wi">Images</a></li>
 					<li> <a href="https://www.google.fr/intl/fr/options/"><img src="images/app_logo.png" alt="app logo"></a></li>
-					<li> <a href="https://accounts.google.com/"><button>Connexion</button></a></li>
+					<li> <a id="btn_login" href="https://accounts.google.com/">Connexion</a></li>
 				</ul>
 			</div>
 		</header>
 
-		<div id="main">
-			<div class="main_elements">
-				<img src="images/google_logo.png" alt="google logo">
-				<form> <input type="text"/ name="search"></form>
-				<button> Recherche Google </button>
-				<button> J'ai de la chance </button>
-			</div>
-		</div>
+		<main>
+				<img id="logo" src="images/google_logo.png" alt="google logo">
+				<input type="text"/ name="search">
+				<div class="btn">
+					<button> Recherche Google </button>
+					<button> J'ai de la chance </button>
+				</div>
+		</main>
 
 	<footer>		
 		<p> France </p>
-		<div class="footer_left">
 			<ul>
 				<li> <a href="https://ads.google.com/intl/en_FR/home/"> Publicité </a></li>
 				<li> <a href="https://www.google.com/services/#?modal_active=none "> Entreprise </a></li>
 				<li> <a href="https://www.google.com/intl/fr_fr/about/"> A propos </a></li>
-			</ul>
-		</div>
-
-		<div>
-			<ul>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li> <a href="https://support.google.com/websearch/answer/7585859?p=fr_consumer_info&hl=fr&fg=1&visit_id=636740706362410914-801378658&rd=1"> Info Consommateurs</a></li>
+				<li> <a href="https://policies.google.com/privacy?hl=fr&gl=fr"> Confidentialité </a></li>
+				<li> <a href="https://policies.google.com/terms?hl=fr&gl=fr"> Conditions </a></li>
+				<li> <a href="#"> Paramètres </a></li>
 			</ul>	
-		</div>
-
 	</footer>
 		
 	</body>
